--- a/src/ProductListing.css
+++ b/src/ProductListing.css
@@ -1,3 +1,23 @@
-.main {
+.main-product {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: white;
+}
+
+.nav {
+    background-color: 09c309;
+    flex: 1;
+}
+
+.div {
+    color: white;
+    flex: 6;
 }
